<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apphunters.bconvo.MainActivity">

    <TextView
        android:text="@string/Octal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignBaseline="@+id/OText"
        android:layout_alignBottom="@+id/OText"
        android:layout_toRightOf="@+id/OText"
        android:layout_toEndOf="@+id/OText"
        android:layout_marginLeft="54dp"
        android:layout_marginStart="54dp"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/OText"
        android:layout_alignLeft="@+id/OText"
        android:layout_alignStart="@+id/OText"
        android:layout_marginTop="28dp"
        android:id="@+id/DText" />

    <TextView
        android:text="@string/holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DText"
        android:layout_alignLeft="@+id/DText"
        android:layout_alignStart="@+id/DText"
        android:layout_marginTop="21dp"
        android:id="@+id/Htext" />

    <TextView
        android:text="@string/binary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_above="@+id/OText"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/OText"
        android:layout_below="@+id/BText"
        android:layout_alignLeft="@+id/BText"
        android:layout_alignStart="@+id/BText" />


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/types"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/textView7"
        android:layout_toEndOf="@+id/textView5"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/spinner"
        android:layout_alignBottom="@id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/spinner">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <EditText
                android:id="@+id/UI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/help"
                android:enabled="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

    </ScrollView>

    <TextView
        android:text="@string/Decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/DText"
        android:layout_alignBottom="@+id/DText"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_below="@id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num7"
            android:text="7"
            android:onClick="num7" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num4"
            android:text="4"
            android:onClick="num4" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num1"
            android:text="1"
            android:onClick="num1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num0"
            android:onClick="num0"
            android:text="0" />


    </LinearLayout>

   <LinearLayout
       android:id="@+id/lin2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/spinner"
       android:layout_toRightOf="@id/lin1"
       android:orientation="vertical">
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/num8"
           android:text="8"
           android:onClick="num8" />
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/num5"
           android:text="5"
           android:onClick="num5" />
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/num2"
           android:onClick="num2"
           android:text="2" />
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/numF"
           android:onClick="numF"
           android:text="F" />

   </LinearLayout>
    <LinearLayout
        android:id="@+id/lin3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:layout_toRightOf="@id/lin2"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num9"
            android:text="9"
            android:onClick="num9" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num6"
            android:text="6"
            android:onClick="num6" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num3"
            android:onClick="num3"
            android:text="3" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numE"
            android:text="E"
            android:onClick="numE" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/spinner"
        android:layout_toRightOf="@id/lin3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numA"
            android:text="A"
            android:onClick="numA" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numB"
            android:text="B"
            android:onClick="numB" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numC"
            android:onClick="numC"
            android:text="C" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numD"
            android:text="D"
            android:onClick="numD" />

    </LinearLayout>

    <TextView
        android:text="@string/holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BText"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/lin1"
        android:layout_toEndOf="@+id/lin1" />

    <TextView
        android:text="@string/Hexa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/Htext"
        android:layout_alignBottom="@+id/Htext"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lin1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/BackSpace"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:text="BackSpace"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dot"
            android:onClick="dot"
            android:text="."
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cal"
            android:text="CAL"
            />


    </LinearLayout>
</RelativeLayout>
